objects/GBLite__GridBuddySettings__c.object
<CustomObject>
    <fields>
        <fullName>GBLite__Custom_CSS_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom CSS File</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Custom_JS_File__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom JS File</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Default_Definition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Definition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GBLite__Definition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GBLite__Grid_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Grid Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>GridBuddySettings</label>
    <listViews>
        <fullName>GBLite__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GB-{0000}</displayFormat>
        <label>GridBuddySettings Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GridBuddySettings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>